# AutenticaPJe

./: README.md  TemplateEnv.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-commit-message-instructions.md
autenticapje/: __init__.py  __main__.py  assinador.py  formatadores.py  keystore.py
autenticapje/cli/: __init__.py
autenticapje/driver/: __init__.py  web_element.py
autenticapje/driver/constants/: __init__.py  webdriver.py  webdriver.pyi
autenticapje/elements/: __init__.py  pje.py
typings/: __init__.py
typings/java/io/: __init__.pyi
typings/java/security/cert/: __init__.pyi
typings/java/util/: __init__.pyi
